create header and not finished yet

--- a/index.html
+++ b/index.html
@@ -4,7 +4,28 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="asset/css/styles.css" />
+    <title>TRAVYUK | LANDING PAGE</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <div class="header__navigasi">
+        <div class="header__logo-box">
+          <span class="logo">Travyuk</span>
+        </div>
+        <nav>
+          <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">Featured</a></li>
+            <li><a href="">Service</a></li>
+            <li><a href="">Contact Us</a></li>
+          </ul>
+        </nav>
+        <div>
+          <a href="">Sign In</a>
+          <a href="">Sign Up</a>
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
