create hover menu

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
         <div class="header__logo-box">
           <span class="logo">Travyuk</span>
         </div>
-        <nav>
+        <nav class="nav">
           <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">Featured</a></li>
-            <li><a href="">Service</a></li>
-            <li><a href="">Contact Us</a></li>
+            <li><a href="#" class="link-item">Home</a></li>
+            <li><a href="#" class="link-item">Featured</a></li>
+            <li><a href="#" class="link-item">Service</a></li>
+            <li><a href="#" class="link-item">Contact Us</a></li>
           </ul>
         </nav>
         <div>
